--- a/app/assets/stylesheets/custom.css.scss
+++ b/app/assets/stylesheets/custom.css.scss
@@ -1,2 +1,8 @@
 @import "bootstrap-sprockets";
 @import "bootstrap";
+
+body {
+    background-image: image-url("S&C1.png");
+    background-repeat: no-repeat;
+    background-position: right bottom;
+}
