--- a/app/assets/stylesheets/home.css
+++ b/app/assets/stylesheets/home.css
@@ -1,16 +1,63 @@
 
 .homeGridList .hq-default{
-    background:#990000;
+    /*background:#990000;*/
+    background:rgba(153,0,0,0.7);
+    
+    -webkit-transition: all 1s ease;
+    transition: all 1s ease;
 }
+
+.homeGridList .hq-default:hover{
+    /*background:#ffffff;*/
+    background:rgba(255,255,255,0.7);
+    color: #000000;
+}
+
 .hq-home-card {
     color: #ffffff;
     font-size: .8em;
 }
 .hq-home-card div md-grid-tile-header h3 {
     font-size: 1.4em;
+    
+    -webkit-transition: all 1s ease;
+    transition: all 1s ease;
 }
+
+.homeGridList .hq-home-card:hover div md-grid-tile-header h3, .homeGridList .hq-home-card:hover a md-grid-tile-header h3 {
+    color: #990000;    
+}
+
 .hq-home-card .hq-tile-body {
     margin-top: 45px;
     padding: 5px 10px 5px 10px;
 }
+.hq-card-subtitle {
+    border-bottom: 1px solid #ffffff;
+}
+/*Image cards*/
+.hq-home-card figure .hq-photo, .hq-card-img-wrapper, .hq-card-img-wrapper img {
+    width: 100%;
+    height: 100%;
+}
 
+/*Links*/
+.hq-page-link {
+    color: #000000;
+    font-weight: bold;
+    padding-bottom: 2px;
+}
+
+.hq-page-link:hover {
+    color: #990000;
+    text-decoration: none;
+}
+
+/*Card Links*/
+.hq-card-link .hq-tile-body, .hq-card-link .hq-tile-body div .hq-card-subtitle{
+    color: #ffffff;
+}
+.homeGridList .hq-default:hover .hq-card-link .hq-tile-body{
+    color:#000000;
+}
+/*Animate*/
