Add Questions Page

--- a/app/views/media/index.html.erb
+++ b/app/views/media/index.html.erb
@@ -4,7 +4,7 @@
         <!--Main Item-->
         <md-grid-tile class="hq-media-main" md-colspan="4" md-colspan-sm="1">
             <div class="hq-main-img-wrapper">
-                <img src="/hairphotos/{{mainMedia}}" alt="TEST">
+                <img src="/hairphotos/{{mainMedia}}" alt="Hair photos">
             </div>
         </md-grid-tile>
         
