--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -72,7 +72,7 @@ html, body {
 
 /*Body*/
 .hq-body {
-    padding-bottom: 105px;
+    padding-bottom: 155px;
     
     font-family: 'Josefin Sans', sans-serif;
 }
@@ -95,7 +95,7 @@ a:hover {
 /*Footer*/
 .hq-footer{
     background-color: #000000;
-	height: 75px;
+	height: 85px;
 	
 	width: 100%;
 	position: absolute;
@@ -105,7 +105,13 @@ a:hover {
 .footer-nav {
     color:#990000;
 }
-
+.footer-bottom-color {
+    height:10px;
+    width: 100%;
+    background-color:rgba(153,0,0,0.7);
+    position:absolute;
+    bottom: 0px;
+}
 .footer-nav:hover {
     color: #cccccc;
 }
