--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -103,7 +103,8 @@ a:hover {
 	left: 0;
 }
 .footer-nav {
-    color:#990000;
+    /*color:#990000;*/
+    color: rgba(255,153,0,1);
 }
 .footer-bottom-color {
     height:10px;
