--- a/app/assets/stylesheets/contact.css
+++ b/app/assets/stylesheets/contact.css
@@ -11,8 +11,15 @@
     background:rgba(255,255,255,0.7);
     color: #000000;
 }
+
+.contactGridList .hq-default:hover md-grid-tile-header{
+    background-color: rgba(0,0,0,0.7);
+    -webkit-transition: all 1s ease;
+    transition: all 1s ease;
+}
 .contactGridList .hq-default:hover md-grid-tile-header h3{
-    color: #990000;    
+    /*color: #990000;    */
+    color:rgba(255,153,0,1);    
 }
 
 .contactGridList .hq-default:hover .hq-tile-body .hq-special-table {
@@ -43,7 +50,7 @@
     transition: all 1s ease;
 }
 .contactGridList .hq-special-card md-grid-tile-header{
-    background-color: #000000;
+    background-color: rgba(0,0,0,0.7);
 }
 .contactGridList .hq-special-card .hq-tile-body{
     color: #000000;
@@ -68,7 +75,7 @@
     color: #000000;
     font-weight: bold;
     border-top: 1px solid #000000;
-    background-color: rgba(153, 0, 0, 0.5);
+    background-color: rgba(204, 204, 204, 0.5);
 }
 
 /*Calender*/
