--- a/app/assets/stylesheets/questions.css
+++ b/app/assets/stylesheets/questions.css
@@ -32,12 +32,16 @@
     position: absolute;
     right: -10px;
     top: -10px;
-    color: rgba(0,0,0,1);
-    background-color: rgba(255,255,255,0.5);
-    border-radius: 100px;
+    /*color: rgba(0,0,0,1);*/
+    color: rgba(255,153,0,1);
+    background-color:rgba(0,0,0,0.5);
+    
+    padding: 2px 8px;
+    border-radius: 00px;
 }
 .even-ques i {
-    color: rgba(153,0,0,1);
+    /*color: rgba(153,0,0,1);*/
+    color: rgba(255,153,0,1);
 }
 .question-section p span {
     font-size: 1.5em;
