--- a/app/views/contact/index.html.erb
+++ b/app/views/contact/index.html.erb
@@ -5,7 +5,7 @@
         <!-- Business Card -->
         <md-grid-tile class="hq-contact-card hq-special-card" md-colspan="4" md-colspan-sm="1">
           <md-grid-tile-header>
-            <h3>Call for All Appointments</h3>
+            <h3>Appointments</h3>
           </md-grid-tile-header>
           <div class="hq-tile-body hq-bc">
             <!--Personal-->
