--- a/app/views/questions/index.html.erb
+++ b/app/views/questions/index.html.erb
@@ -2,7 +2,7 @@
     <h1 class="page-headers">Questions</h1>
     <div class="questions-card">
         <div class="question-section" ng-repeat="question in questions | orderBy : 'order'" ng-class-even="'even-ques'">
-            <i class="fa fa-question-circle"></i>
+            <i class="fa fa-question"></i>
             <p class="hq-question"><span>Q:</span> {{ question.question}}</p>
             <p class="hq-answer"><span>A:</span> {{ question.answer }}</p>
         </div>
